--- a/src/pages/species/species.scss
+++ b/src/pages/species/species.scss
@@ -1,3 +1,27 @@
-page-species {
-
+page-species .item .label {
+  max-height: 75px;
 }
+page-species .item .thumbnail {
+  float: left;
+  width: 25%;
+}
+page-species .item .thumbnail img {
+  width: 50px;
+  border-radius: 25px;
+  height: 50px;
+}
+page-species .item .infos {
+  float: left;
+  width: 75%;
+}
+page-species .item .infos .name {
+  width: 100%;
+  display: block;
+}
+page-species .item .infos .description {
+  width: 100%;
+  display: block;
+  color: lightgray;
+  font-size: 12px;
+}
+
