--- a/src/pages/photos/photos.scss
+++ b/src/pages/photos/photos.scss
@@ -1,3 +1,12 @@
 page-photos {
 
 }
+.upload {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #f5f597;
+  padding: 15px;
+  border-radius: 25px;
+  border: 2px solid #f5cb97;
+}
