Fix errors width/age/like

--- a/src/pages/animal-details/animal-details.scss
+++ b/src/pages/animal-details/animal-details.scss
@@ -4,3 +4,12 @@
 .img {
   max-height:200px;
 }
+.pictures .item {
+  padding: 0 !important;
+}
+.pictures .item .label-md {
+  margin-right: 0 !important;
+}
+.pictures .item .item-inner {
+  padding-right: 0 !important;
+}
