--- a/src/pages/photos/photos.scss
+++ b/src/pages/photos/photos.scss
@@ -1,3 +1,12 @@
 page-photos {
 
 }
+.photos.item {
+  padding: 0 !important;
+}
+.photos.item .label-md {
+  margin-right: 0 !important;
+}
+.photos.item .item-inner {
+  padding-right: 0 !important;
+}
