--- a/src/pages/specie-details/specie-details.scss
+++ b/src/pages/specie-details/specie-details.scss
@@ -7,3 +7,13 @@ page-species {
 .img {
   max-height:200px;
 }
+.pictures .item {
+  padding: 0 !important;
+}
+.pictures .item .label-md {
+  margin-right: 0 !important;
+}
+.pictures .item .item-inner {
+  padding-right: 0 !important;
+}
+
